# IDP_ct

./: CMakeLists.txt  README.md  camera-test  idp-stream.py  laptop_client.py  python_objdetect.py  server.py  yolotrain.py
